k8s/socialbook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: socialbook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: socialbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: socialbook
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: socialbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        app.kubernetes.io/version: "latest"
    spec:
      containers:
        - name: backend
          image: alazar111/socialbook-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: socialbook
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: socialbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        app.kubernetes.io/version: "latest"
    spec:
      containers:
        - name: frontend

          image: alazar111/socialbook-frontend:frontend-e8495b4

          image: alazar111/socialbook-frontend:frontend-e8495b4

          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: socialbook
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
